Better organized /lib/libc/tests/net/getaddrinfo by moving testdata to a subdirectory.

--- a/lib/libc/tests/net/getaddrinfo/Makefile
+++ b/lib/libc/tests/net/getaddrinfo/Makefile
@@ -14,13 +14,18 @@ ${PACKAGE}DATA_FILESPACKAGE=	tests
 
 ${PACKAGE}DATA_FILESDIR=	${TESTSDIR}/data
 
-${PACKAGE}DATA_FILES+=		basics_v4.exp	basics_v4v6.exp
-${PACKAGE}DATA_FILES+=		no_host_v4.exp	no_host_v4v6.exp
-${PACKAGE}DATA_FILES+=		no_serv_v4.exp	no_serv_v4v6.exp
-${PACKAGE}DATA_FILES+=		sock_raw_v4.exp	sock_raw_v4v6.exp
-${PACKAGE}DATA_FILES+=		spec_fam_v4.exp	spec_fam_v4v6.exp
-${PACKAGE}DATA_FILES+=		scoped.exp
-${PACKAGE}DATA_FILES+=		unsup_fam.exp
+${PACKAGE}DATA_FILES+=          data/basics_v4.exp
+${PACKAGE}DATA_FILES+=          data/basics_v4v6.exp
+${PACKAGE}DATA_FILES+=          data/no_host_v4.exp
+${PACKAGE}DATA_FILES+=          data/no_host_v4v6.exp
+${PACKAGE}DATA_FILES+=          data/no_serv_v4.exp
+${PACKAGE}DATA_FILES+=          data/no_serv_v4v6.exp
+${PACKAGE}DATA_FILES+=          data/scoped.exp
+${PACKAGE}DATA_FILES+=          data/sock_raw_v4.exp
+${PACKAGE}DATA_FILES+=          data/sock_raw_v4v6.exp
+${PACKAGE}DATA_FILES+=          data/spec_fam_v4.exp
+${PACKAGE}DATA_FILES+=          data/spec_fam_v4v6.exp
+${PACKAGE}DATA_FILES+=          data/unsup_fam.exp
 
 .include "../../Makefile.netbsd-tests"
 
