getaddrinfo_test: rename t_getaddrinfo.sh to getaddrinfo_test.sh.

--- a/lib/libc/tests/net/getaddrinfo/Makefile
+++ b/lib/libc/tests/net/getaddrinfo/Makefile
@@ -4,7 +4,7 @@ PACKAGE=	tests
 
 BINDIR=		${TESTSDIR}
 
-ATF_TESTS_SH=	t_getaddrinfo
+ATF_TESTS_SH=	getaddrinfo_test
 ATF_TESTS_C=	getaddrinfo
 
 PROGS=		h_gai
