--- a/usr.sbin/traceroute/Makefile
+++ b/usr.sbin/traceroute/Makefile
@@ -7,6 +7,7 @@ SRCS=	as.c traceroute.c traceroute6.c ifaddrlist.c findsaddr-udp.c main.c
 BINOWN=	root
 BINMODE=4555
 LINKS=	${BINDIR}/traceroute ${BINDIR}/traceroute6
+MLINKS=	traceroute.8 traceroute6.8
 
 .if !defined(TRACEROUTE_NO_IPSEC)
 CFLAGS+= -DIPSEC
