--- a/.github/workflows/cross-bootstrap-tools.yml
+++ b/.github/workflows/cross-bootstrap-tools.yml
@@ -2,7 +2,7 @@ name: Cross-build Kernel
 
 on:
   push:
-    branches: [ main, 'stable/14', 'stable/13', 'for-main' ]
+    branches: [ main, 'stable/14', 'stable/13' ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
