packages: add a new iputils package for ping and traceroute
this moves them out of runtime, where they definitely don't belong.
since both ping and traceroute are setuid, there is a (minor) security
benefit to putting them in their own package so minimal systems don't
need to install them.

since rc.d/netwait requires ping, make rc depend on iputils for now.

--- a/release/packages/Makefile.package
+++ b/release/packages/Makefile.package
@@ -91,6 +91,9 @@ hyperv-tools_COMMENT=	Microsoft HyperV Utilities
 hyperv-tools_DESC=	Microsoft HyperV Utilities
 inetd_COMMENT=		Internet super-server
 inetd_DESC=		Internet super-server
+iputils_COMMENT=	IP utilities
+iputils_DESC=		Contains non-essential IP utilities: ping, ping6, \
+traceroute and traceroute6.
 jail_COMMENT= 		Jail Utilities
 jail_DESC= 		Jail Utilities
 jail-debug_DESCR= 	Debugging Symbols
