kboot: Start to move efi common routines to libkboot
Start to move the common efi routines into libkboot by moving the efi
memory map walking and implementing a printing routine around it.

Sponsored by:		Netflix

--- a/stand/kboot/libkboot/Makefile
+++ b/stand/kboot/libkboot/Makefile
@@ -13,6 +13,10 @@ SRCS+=	seg.c
 SRCS+=	termios.c
 SRCS+=	util.c
 
+.if ${MACHINE_ARCH} != "powerpc64"
+SRCS+=	efi.c
+.endif
+
 .sinclude "${.CURDIR}/arch/${MACHINE_ARCH}/Makefile.inc"
 
 .include <bsd.lib.mk>
