libc/tests: copy ieeefp tests out from contrib/netbsd-tests and rename them as FreeBSD test convention.

--- a/lib/libc/tests/gen/Makefile
+++ b/lib/libc/tests/gen/Makefile
@@ -6,7 +6,10 @@ ATF_TESTS_C+=		dlopen_empty_test
 ATF_TESTS_C+=		fmtcheck2_test
 ATF_TESTS_C+=		fmtmsg_test
 ATF_TESTS_C+=		fnmatch2_test
+ATF_TESTS_C+=		fpclassify_test
 ATF_TESTS_C+=		fpclassify2_test
+ATF_TESTS_C+=		fpsetmask_test
+ATF_TESTS_C+=		fpsetround_test
 ATF_TESTS_C+=		ftw_test
 ATF_TESTS_C+=		getentropy_test
 ATF_TESTS_C+=		getmntinfo_test
@@ -49,9 +52,6 @@ NETBSD_ATF_TESTS_C+=	cpuset_test
 NETBSD_ATF_TESTS_C+=	dir_test
 NETBSD_ATF_TESTS_C+=	floatunditf_test
 NETBSD_ATF_TESTS_C+=	fnmatch_test
-NETBSD_ATF_TESTS_C+=	fpclassify_test
-NETBSD_ATF_TESTS_C+=	fpsetmask_test
-NETBSD_ATF_TESTS_C+=	fpsetround_test
 NETBSD_ATF_TESTS_C+=	ftok_test
 NETBSD_ATF_TESTS_C+=	getcwd_test
 NETBSD_ATF_TESTS_C+=	getgrent_test
