--- a/release/Makefile
+++ b/release/Makefile
@@ -320,6 +320,9 @@ packagesystem: ${DISTRIBUTIONS}
 pkg-stage: dvd
 # TODO: Support for -DNO_ROOT
 .if !defined(NOPKG) || empty(NOPKG)
+.if defined(NO_ROOT)
+.warning pkg-stage does not yet support NO_ROOT.
+.endif
 	env PORTSDIR=${PORTSDIR} REPOS_DIR=${.CURDIR}/pkg_repos/ \
 		sh ${.CURDIR}/scripts/pkg-stage.sh
 	mkdir -p ${.OBJDIR}/dvd/packages/repos/
