--- a/stand/kboot/libkboot/Makefile
+++ b/stand/kboot/libkboot/Makefile
@@ -8,6 +8,7 @@ CFLAGS+=-I${.CURDIR} -I${.CURDIR}/arch/${MACHINE_ARCH}
 CFLAGS+=-I${LDRSRC}
 
 SRCS=	crt1.c
+SRCS+=	dfk.c
 SRCS+=	host_syscall.S
 SRCS+=	host_syscalls.c
 SRCS+=	seg.c
