--- a/secure/lib/libssh/Makefile
+++ b/secure/lib/libssh/Makefile
@@ -4,10 +4,22 @@
 LIB=	ssh
 PRIVATELIB=	true
 SHLIB_MAJOR=	5
-SRCS=	ssh_api.c ssherr.c \
-	sshbuf.c sshkey.c sshbuf-getput-basic.c \
-	sshbuf-misc.c sshbuf-getput-crypto.c krl.c bitmap.c
-SRCS+=	authfd.c authfile.c \
+
+LIBOPENSSH_SRCS=\
+	ssh_api.c \
+	ssherr.c \
+	sshbuf.c \
+	sshkey.c \
+	sshbuf-getput-basic.c \
+	sshbuf-misc.c \
+	sshbuf-getput-crypto.c \
+	krl.c \
+	bitmap.c
+
+# gss-genr.c should be in $SRCS but causes linking problems, so it is
+# compiled directly into sshd instead.
+SRCS=	${LIBOPENSSH_SRCS} \
+	authfd.c authfile.c \
 	canohost.c channels.c cipher.c cipher-aes.c cipher-aesctr.c \
 	cleanup.c \
 	compat.c fatal.c hostfile.c \
@@ -29,9 +41,6 @@ SRCS+=	authfd.c authfile.c \
 SRCS+=	ssh-sk-client.c
 
 PACKAGE=	ssh
-
-# gss-genr.c should be in $SRCS but causes linking problems, so it is
-# compiled directly into sshd instead.
 
 # Portability layer
 SRCS+=	bcrypt_pbkdf.c blowfish.c bsd-misc.c bsd-signal.c explicit_bzero.c \
