--- a/secure/libexec/sftp-server/Makefile
+++ b/secure/libexec/sftp-server/Makefile
@@ -1,8 +1,8 @@
 .include <src.opts.mk>
 .include "${SRCTOP}/secure/ssh.mk"
 
-PROG=   sftp-server
-SRCS=   sftp-server.c sftp-common.c sftp-server-main.c
+PROG=	sftp-server
+SRCS=	sftp-common.c sftp-server.c sftp-server-main.c
 MAN=	sftp-server.8
 
 LIBADD=	ssh
