--- a/secure/usr.bin/ssh-add/Makefile
+++ b/secure/usr.bin/ssh-add/Makefile
@@ -2,7 +2,7 @@
 .include "${SRCTOP}/secure/ssh.mk"
 
 PROG=	ssh-add
-SRCS+=	ssh-add.c ssh-sk-client.c
+SRCS=	ssh-add.c ssh-sk-client.c
 PACKAGE=	ssh
 
 LIBADD=	ssh
