--- a/secure/usr.sbin/sshd/Makefile
+++ b/secure/usr.sbin/sshd/Makefile
@@ -7,7 +7,8 @@ PROG=	sshd
 SRCS=	sshd.c \
 	platform-listen.c \
 	servconf.c sshpty.c srclimit.c groupaccess.c auth2-methods.c \
-	dns.c fatal.c compat.c utf8.c authfd.c canohost.c
+	dns.c fatal.c compat.c utf8.c authfd.c canohost.c \
+	$(SKSRCS)
 PACKAGE=	ssh
 
 MAN=	sshd.8 sshd_config.5
