bsdbox: fix the hostapd build, hook it back up
WPA stuff is now structured a little bit differently and requires a
number of other libs now, so pull those in.  It also needs to be able to
keep wpa_driver_bsd_ops exposed as part of the lib/program contract.

Reviewed by:	adrian, imp
Differential Revision:	https://reviews.freebsd.org/D42500

--- a/tools/bsdbox/Makefile
+++ b/tools/bsdbox/Makefile
@@ -94,7 +94,7 @@ CRUNCH_LIBS+= -lm
 
 .include "Makefile.base"
 .include "Makefile.net"
-#.include "Makefile.hostapd"
+.include "Makefile.hostapd"
 #.include "Makefile.textproc"
 .include "Makefile.login"
 .include "Makefile.kld"
