--- a/tools/bsdbox/Makefile.hostapd
+++ b/tools/bsdbox/Makefile.hostapd
@@ -7,6 +7,8 @@ CRUNCH_PROGS_usr.sbin+=	hostapd hostapd_cli
 CRUNCH_SRCDIR_hostapd=	$(.CURDIR)/../../usr.sbin/wpa/hostapd
 CRUNCH_SRCDIR_hostapd_cli=	$(.CURDIR)/../../usr.sbin/wpa/hostapd_cli
 
+CRUNCH_KEEP_hostapd+=	wpa_driver_bsd_ops
+
 #CRUNCH_PROGS_usr.sbin+=	wpa_supplicant wpa_cli
 #CRUNCH_SRCDIR_wpa_supplicant=	$(.CURDIR)/../../usr.sbin/wpa/wpa_supplicant
 #CRUNCH_SRCDIR_wpa_cli=	$(.CURDIR)/../../usr.sbin/wpa/wpa_cli
@@ -17,3 +19,10 @@ CRUNCH_LIBS+=	-lmlx5 -libverbs
 .endif
 CRUNCH_LIBS+=	-lpcap
 
+wpalibs=	drivers ap l2_packet eap_server
+wpalibs+=	eapol_auth eap_common
+wpalibs+=	radius tls wps common crypto utils
+
+.for wpalib in ${wpalibs}
+CRUNCH_LIBS+=	${LIBWPA${wpalib:tu}}
+.endfor
