--- a/tools/bsdbox/Makefile.hostapd
+++ b/tools/bsdbox/Makefile.hostapd
@@ -3,15 +3,18 @@
 #
 #
 .include <src.opts.mk>
+
+WPASRC?=	${SRCTOP}/usr.sbin/wpa
+
 CRUNCH_PROGS_usr.sbin+=	hostapd hostapd_cli
-CRUNCH_SRCDIR_hostapd=	$(.CURDIR)/../../usr.sbin/wpa/hostapd
-CRUNCH_SRCDIR_hostapd_cli=	$(.CURDIR)/../../usr.sbin/wpa/hostapd_cli
+CRUNCH_SRCDIR_hostapd=	${WPASRC}/hostapd
+CRUNCH_SRCDIR_hostapd_cli=	${WPASRC}/hostapd_cli
 
 CRUNCH_KEEP_hostapd+=	wpa_driver_bsd_ops
 
 CRUNCH_PROGS_usr.sbin+=	wpa_supplicant wpa_cli
-CRUNCH_SRCDIR_wpa_supplicant=	$(.CURDIR)/../../usr.sbin/wpa/wpa_supplicant
-CRUNCH_SRCDIR_wpa_cli=	$(.CURDIR)/../../usr.sbin/wpa/wpa_cli
+CRUNCH_SRCDIR_wpa_supplicant=	${WPASRC}/wpa_supplicant
+CRUNCH_SRCDIR_wpa_cli=	${WPASRC}/wpa_cli
 
 .if ${MK_OFED} != "no"
 # libpcap dependencies if OFED is enabled
