secure: Add ssh-sk-client to all consumers of libssh
These all failed to link with ld.bfd used by GCC due to
Fssh_sshsk_sign being an unresolved symbol.

Fixes:		65d8491719bb ("secure: Adapt Makefile to ssh-sk-client everywhere")

--- a/secure/libexec/sftp-server/Makefile
+++ b/secure/libexec/sftp-server/Makefile
@@ -2,7 +2,7 @@
 .include "${SRCTOP}/secure/ssh.mk"
 
 PROG=	sftp-server
-SRCS=	sftp-common.c sftp-server.c sftp-server-main.c
+SRCS=	sftp-common.c sftp-server.c sftp-server-main.c $(SKSRCS)
 MAN=	sftp-server.8
 
 LIBADD=	ssh
