--- a/secure/usr.bin/scp/Makefile
+++ b/secure/usr.bin/scp/Makefile
@@ -2,7 +2,7 @@
 .include "${SRCTOP}/secure/ssh.mk"
 
 PROG=	scp
-SRCS=	scp.c progressmeter.c $(SFTP_CLIENT_SRCS)
+SRCS=	scp.c progressmeter.c $(SFTP_CLIENT_SRCS) $(SKSRCS)
 PACKAGE=	ssh
 
 LIBADD=	ssh
