bsd.compiler.mk: Add a blocks compiler feature.
Sponsored by:	Klara, Inc.
Reviewed by:	jrtc27
Differential Revision:	https://reviews.freebsd.org/D49963

--- a/lib/libc/gen/Makefile.inc
+++ b/lib/libc/gen/Makefile.inc
@@ -168,7 +168,7 @@ SRCS+= \
 	valloc.c \
 	wordexp.c
 
-.if ${COMPILER_TYPE} == "clang"
+.if ${COMPILER_FEATURES:Mblocks}
 CFLAGS.fts.c= -fblocks
 .endif
 
