Partially revert 6527682ab705 for llvm-based projects
Upstream llvm compiles most of their subprojects with -std=c++17
explicitly, not -std=gnu++17. In gnu++17 mode, both clang and gcc define
the macro 'i386' on i386, which clashes with a namespace identifier in
contrib/llvm-project/llvm/include/llvm/ExecutionEngine/JITLink/i386.h.

Since the default after 6527682ab705 is now CXXSTD=gnu++17, explicitly
set CXXSTD=c++17 for lib/clang, lib/libclang_rt and lib/libomp.

--- a/lib/libomp/Makefile
+++ b/lib/libomp/Makefile
@@ -57,6 +57,7 @@ CFLAGS+=	-fdata-sections
 CXXFLAGS+=	-fvisibility-inlines-hidden
 CXXFLAGS+=	-fno-exceptions
 CXXFLAGS+=	-fno-rtti
+CXXSTD=		c++17
 
 .if ${COMPILER_TYPE} == "clang"
 .if ${MACHINE_CPUARCH} == "i386"
