--- a/bin/ps/Makefile
+++ b/bin/ps/Makefile
@@ -12,5 +12,8 @@ SRCS=	fmt.c keyword.c nlist.c print.c ps.c
 #
 CFLAGS+=-DLAZY_PS
 LIBADD=	m kvm jail xo
+.ifdef PS_CHECK_KEYWORDS
+CFLAGS+=-DPS_CHECK_KEYWORDS
+.endif
 
 .include <bsd.prog.mk>
