--- a/tests/ci/Makefile
+++ b/tests/ci/Makefile
@@ -8,8 +8,9 @@
 # Makefile for CI testing.
 #
 # User-driven targets:
-#  ci: Run CI tests. Currently only smoke tests are supported.
-#  ci-smokeit: Currently same as ci.
+#  ci: Run CI tests
+#  ci-smoke: Run smoke tests which is simply booting the image
+#  ci-full: Run full tests
 #
 # Variables affecting the build process:
 #  TARGET/TARGET_ARCH: architecture of built release (default: same as build host)
@@ -68,11 +69,25 @@ SWAPSIZE?=	1g
 VMFS?=		ufs
 FORMAT=		raw
 CIIMAGE=	ci-${OSRELEASE}-${GITREV}-${KERNCONF}.${FORMAT}
+CIDISK?=	${.OBJDIR}/${CIIMAGE}
 VMSIZE?=	6g
-CITYPE?=
+CITYPE?=	full
+META_TAR!=mktemp /tmp/meta.XXXXXX
+META_DIR!=mktemp -d /tmp/meta.XXXXXX
+META_DIROUT!=mktemp -d /tmp/meta.XXXXXX
+DISC_CAM!=truncate -s 128m /tmp/disk-cam
+EXTRA_DISK_NUM?=5
+DISK_NUMBERS!=jot - 1 ${EXTRA_DISK_NUM}
+BHYVE_EXTRA_DISK_PARAM?=
+BHYVE_EXTRA_DISK_PARAM+=-s 4:0,ahci-hd,/tmp/disk-cam
+.for i in ${DISK_NUMBERS}
+NEW_DISK!=truncate -s 128m /tmp/disk${i}
+BHYVE_EXTRA_DISK_PARAM+=-s $$((${i} + 4)):0,virtio-blk,/tmp/disk${i}
+CLEANFILES+=/tmp/disk${i}
+.endfor
 TEST_VM_NAME=	ci-${OSRELEASE}-${GITREV}-${KERNCONF}
 .if ${TOTAL_MEMORY} >= 16
-VM_MEM!=expr ${TOTAL_MEMORY} / 2
+VM_MEM=8
 .elif ${TOTAL_MEMORY} >=4
 VM_MEM=${TOTAL_MEMORY}
 .else
@@ -117,8 +132,8 @@ KLDFILEMONISLOADED!=kldload -q -n filemon 2>/dev/null && echo "1" || echo "0"
 METAMODE?=-DWITH_META_MODE
 .endif
 
-CLEANFILES=	${CIIMAGE} ci.img
-CLEANDIRS=	ci-buildimage
+CLEANFILES+=	${.OBJDIR}/${CIIMAGE} ${.OBJDIR}/ci.img ${META_TAR}
+CLEANDIRS+=	${.OBJDIR}/ci-buildimage
 
 portinstall: portinstall-pkg portinstall-qemu portinstall-expect portinstall-${TARGET_ARCH:tl} .PHONY
 
@@ -141,10 +156,12 @@ portinstall-expect: portinstall-pkg .PHONY
 .endif
 
 beforeclean: .PHONY
-	chflags -R noschg .
+	chflags -R noschg ${.OBJDIR}/${.TARGET}
 
 .include <bsd.obj.mk>
 clean: beforeclean .PHONY
+
+cleandir: beforeclean .PHONY
 
 ci-buildworld: .PHONY
 	@echo "Building world for ${TARGET_ARCH}"
@@ -155,7 +172,7 @@ ci-buildworld: .PHONY
 
 
 ci-buildkernel: ci-buildworld-${TARGET_ARCH:tl} .PHONY
-	@echo "Building kenrel for ${TARGET_ARCH"}"
+	@echo "Building kernel for ${TARGET_ARCH"}"
 	${IMAKE} -j${PARALLEL_JOBS} -C ${WORLDDIR} ${METAMODE} \
 		${CROSS_TOOLCHAIN_PARAM} __MAKE_CONF=${MAKECONF} \
 		SRCCONF=${SRCCONF} buildkernel > ${.CURDIR}/_.${TARGET_ARCH}.${.TARGET} 2>&1 || \
@@ -174,19 +191,32 @@ ci-buildimage: ${QEMUTGT} ci-buildkernel-${TARGET_ARCH:tl} .PHONY
 		(echo "${.TARGET} failed, check _.${TARGET_ARCH}.${.TARGET} for details" ; false)
 	touch ${.TARGET}
 
-ci-setsmokevar: .PHONY
+ci-set-smoke-var: .PHONY
 CITYPE=smoke
+
+ci-set-full-var: .PHONY
+CITYPE=full
+
+ci-create-meta: .PHONY
+	truncate -s 512M ${META_TAR}
+	tar rvf ${META_TAR} -C ${META_DIR} .
+
+ci-extract-meta: .PHONY
+	tar xfv ${META_TAR} -C ${META_DIROUT}
+	@echo "Extracted kyua reports to ${META_DIROUT}"
 
 ci-runtest: ci-buildimage-${TARGET_ARCH:tl} portinstall .PHONY
 .if ${MACHINE} == "amd64" && ( ${TARGET_ARCH} == "amd64" || ${TARGET_ARCH} == "i386" ) && ( !defined(USE_QEMU) || empty(USE_QEMU) )
 	/usr/sbin/bhyvectl --vm=${TEST_VM_NAME} --destroy || true
-	/usr/sbin/bhyveload -c stdio -m ${VM_MEM_SIZE} -d ${CIIMAGE} ${TEST_VM_NAME}
+	/usr/sbin/bhyveload -c stdio -m ${VM_MEM_SIZE} -d ${CIDISK} ${TEST_VM_NAME}
 	expect -c "set timeout ${TIMEOUT_EXPECT}; \
 		spawn /usr/bin/timeout -k 60 ${TIMEOUT_VM} /usr/sbin/bhyve \
 		-c ${PARALLEL_JOBS} -m ${VM_MEM_SIZE} -A -H -P \
 		-s 0:0,hostbridge \
 		-s 1:0,lpc \
-		-s 2:0,virtio-blk,${CIIMAGE} \
+		-s 2:0,virtio-blk,${CIDISK} \
+		-s 3:0,virtio-blk,${META_TAR} \
+		${BHYVE_EXTRA_DISK_PARAM} \
 		-l com1,stdio \
 		${TEST_VM_NAME}; \
 		expect { eof }"
@@ -199,7 +229,8 @@ ci-runtest: ci-buildimage-${TARGET_ARCH:tl} portinstall .PHONY
 		-nographic \
 		-no-reboot \
 		${QEMU_EXTRA_PARAM} \
-		-drive if=none,file=${CIIMAGE},format=raw,id=hd0 \
+		-drive if=none,file=${CIDISK},format=raw,id=hd0 \
+		-drive if=none,file=${META_TAR},format=raw,id=hd1 \
 		${QEMU_DEVICES}
 .endif
 
@@ -215,8 +246,10 @@ ci-checktarget: .PHONY
 	@echo "Error: ${TARGET_ARCH} is not supported on ${TYPE} ${REVISION} ${BRANCH}"
 .endif
 
-ci-smokeit: ci-setsmokevar ci-checktarget .WAIT ci-runtest-${TARGET_ARCH:tl} .PHONY
+ci-smoke: ci-set-smoke-var ci-create-meta ci-checktarget .WAIT ci-runtest-${TARGET_ARCH:tl} .PHONY
 
-ci: ci-smokeit .PHONY
+ci-full: ci-set-full-var ci-create-meta ci-checktarget .WAIT ci-runtest-${TARGET_ARCH:tl} ci-extract-meta .PHONY
+
+ci: ci-${CITYPE:tl} .PHONY
 
 .include "${RELEASEDIR}/Makefile.inc1"
